2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/12_and_bol_bool_aff_bool.deca
// Description :
//  test , sur l'opération and (&&).
// Resultats :
//    Valide 
//
// Historique :
// cree le 10/01/2024


{
    boolean b = true && false ;
}