2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/38_and_bool_str.deca
// Description :
//      opération && entre string et boolean 
// Resultats :
//    Erreur Contexteulle : ligne 10 : l'opération && n'est pas possible entre 'string' et 'boolean'
//
// Historique :
// cree le 10/01/2024

{
    "bonjour" && true ;
}